--- a/app/frontend/circuit/index.html
+++ b/app/frontend/circuit/index.html
@@ -244,13 +244,13 @@
           </span>
 
 
-          <a href="#" class="morph_btn play" id="simulationStartStop">
+          <div class="morph_btn play" id="simulationStartStop">
             <span>
               <span class="s1"></span>
               <span class="s2"></span>
               <span class="s3"></span>
             </span>
-          </a>
+          </div>
 
 
         </div>
