--- a/app/frontend/circuit/index.html
+++ b/app/frontend/circuit/index.html
@@ -508,6 +508,11 @@
 
 <link href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" rel="stylesheet" >
 <link href='//fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100,900' rel='stylesheet' type='text/css'>
+
+<script src="//cdn.jsdelivr.net/npm/@tensorflow/tfjs"> </script>
+<script src="//cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"> </script>
+
+
 <link href='../_common/js/bootstrap/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
 <link href='../_common/js/bootstrap-slider/slider.css' rel='stylesheet' type='text/css'>
 <link href="../_common/js/anno.js/anno.css" rel='stylesheet' type='text/css'/>
