--- a/app/frontend/_common/js/mjpeg.html
+++ b/app/frontend/_common/js/mjpeg.html
@@ -11,7 +11,7 @@
 </body>
 <script src="mjpeg.js"></script>
 <script>
-  var player = new MJPEG.Player("player", "http://192.168.178.63:8080/?action=stream");
+  var player = new MJPEG.Player("player", "http://192.168.178.63:8554");
   player.start();
 </script>
 </html>
