--- a/app/frontend/circuit/stream.html
+++ b/app/frontend/circuit/stream.html
@@ -5,7 +5,7 @@
 <canvas id="canvas" width="640" heigth="480"></canvas>
 <script>
   // The mjpeg url.
-  const url = "http://192.168.178.63:8080/?action=stream";
+  const url = "http://192.168.178.63:8554/";
 
   const SOI = new Uint8Array(2);
   SOI[0] = 0xFF;
